# mastermind

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  main.cpp
include/: board.h  codePeg.h  colorPeg.h  computer.h  feedbackPeg.h  game.h  player.h  playerBase.h  user.h
source/: board.cpp  codePeg.cpp  colorPeg.cpp  computer.cpp  feedbackPeg.cpp  game.cpp  player.cpp  playerBase.cpp  user.cpp
tests/: CMakeLists.txt  computer_test.cpp
